--- a/WindowsFormsApp1/App.config
+++ b/WindowsFormsApp1/App.config
@@ -6,9 +6,9 @@
         <add name="WindowsFormsApp1.Properties.Settings.uaDBConnectionString"
             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\uaDB.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
-        <add name="WindowsFormsApp1.Properties.Settings.EquipmentItemDBConnectionString"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\EquipmentItemDB.mdf;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+      <add name="EquipmentInventoryDB"
+       connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\EquipmentItemDB.mdf;Integrated Security=True"
+       providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
