--- a/WindowsFormsApp1/EquipmentInventoryApp.csproj
+++ b/WindowsFormsApp1/EquipmentInventoryApp.csproj
@@ -86,6 +86,8 @@
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=8.0.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Diagnostics.DiagnosticSource.8.0.1\lib\net462\System.Diagnostics.DiagnosticSource.dll</HintPath>
     </Reference>
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.IO.Pipelines, Version=5.0.0.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.IO.Pipelines.5.0.2\lib\net461\System.IO.Pipelines.dll</HintPath>
     </Reference>
@@ -354,6 +356,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>EquipmentItemDB.mdf</DependentUpon>
     </Content>
+    <None Include="Resources\Background-Grey.jpg" />
+    <None Include="Resources\futuristic-background-design.jpg" />
     <Content Include="Resources\Refresh icon.png" />
     <None Include="Resources\Refresh icon1.png" />
     <Content Include="uaDB.mdf">
